[package]
name = "v-plic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-unknown-linux-gnu"


[dependencies]

axconfig = { path = "/arceos_2024S/arceos/modules/axconfig" }
axlog = { path = "/arceos_2024S/arceos/modules/axlog" }
spin = { version = "0.9"}
# log = "0.4"
# log = { version = "0.4", features = ["max_level_trace"] }

riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
# spin = { version = "0.9", features = ["once", "rwlock", "spin_mutex"] }
arrayvec = { version = "0.7.6", default-features = false }